[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
description = """
Rust crate for handling ISO 3166-1.
Each country has a three digit code, two letter code, three letter code,
full state name, and short english aliases.
"""
documentation = "https://docs.rs/celes/"
categories = ["encoding", "no-std", "parsing"]
edition = "2018"
homepage = "https://crates.io/crates/celes"
include = [
    "src/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]
keywords = ["iso3166", "alpha2", "alpha3", "country", "codes"]
license = "Apache-2.0"
name = "celes"
readme = "README.md"
repository = "https://github.com/mikelodder7/celes"
version = "2.0.0"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
