[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
description = """
Rust crate for handling ISO 3166-1.
Each country has a three digit code, two letter code, three letter code,
full state name, and short english aliases.
"""
documentation = "https://docs.rs/celes/"
categories = ["encoding", "parsing"]
edition = "2024"
homepage = "https://crates.io/crates/celes"
include = [
    "src/*.rs",
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md"
]
keywords = ["iso3166", "alpha2", "alpha3", "country", "codes"]
license = "Apache-2.0 OR MIT"
name = "celes"
readme = "README.md"
repository = "https://github.com/mikelodder7/celes"
version = "2.6.0"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
serde_json = "1.0"

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
rust_2018_idioms = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused = "warn"

[lints.clippy]
mod_module_files = "warn"
unwrap_used = "deny"
